--- a/contactus.html
+++ b/contactus.html
@@ -20,7 +20,8 @@
 </head>
 
 <body>
-
+    <script src="/js/scripts.js"></script>
+    
     <!-- header -->
     <header>
         <div class="container">
