--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 
 <body>
 
+    <script src="/js/scripts.js"></script>
+    
     <!-- header -->
     <header>
         <div class="container">
@@ -169,6 +171,16 @@
                         <button type="button" data-bs-target="#homeCarousel" data-bs-slide-to="1"></button>
                         <button type="button" data-bs-target="#homeCarousel" data-bs-slide-to="2"></button>
                     </div>
+
+                    <div class="btn-group" id="carouselButton">
+                        <button class="btn btn-danger btn-sm" id="carouselPause">
+                            <i class="fa-solid fa-pause"></i>
+                        </button>
+                        <button class="btn btn-danger btn-sm" id="carouselPlay">
+                            <i class="fa-solid fa-play"></i>
+                        </button>
+                    </div>
+
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <img class="d-block w-100" src="img/breadcrumb-trail.jpg" alt="Breadcrumb Trail Campground" />
