--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 <body>
 
     <script src="/js/scripts.js"></script>
-    
     <!-- header -->
     <header>
         <div class="container">
@@ -173,11 +172,8 @@
                     </div>
 
                     <div class="btn-group" id="carouselButton">
-                        <button class="btn btn-danger btn-sm" id="carouselPause">
-                            <i class="fa-solid fa-pause"></i>
-                        </button>
-                        <button class="btn btn-danger btn-sm" id="carouselPlay">
-                            <i class="fa-solid fa-play"></i>
+                        <button class="btn btn-danger btn-sm" id="carouselButton">
+                            <i class="fa-solid fa-pause" id="faButton">
                         </button>
                     </div>
 
